Added various filter options for the supplier quotation table
- Supplier quotation table now loads using AJAX thanks to Yajra's datatables plugin
- Various filter options (except for grand total) reload the table whenever their value changes and they go out of focus, this prevents an unnecessarily large amount of AJAX requests
- Added a function in supplierquotationcontroller to return the data of the datatable; more advanced filtering can be done here
- Added a blade file for all the columns of the supplierquotation datatable so that they can be loaded in individually through the controller

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
-        "nesbot/carbon": "^2.46"
+        "nesbot/carbon": "^2.46",
+        "yajra/laravel-datatables": "^1.5"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
