--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,17 @@
         "php": "^7.3|^8.0",
         "ext-gd": "*",
         "barryvdh/laravel-debugbar": "^3.5",
+        "barryvdh/laravel-dompdf": "^0.9.0",
         "doctrine/dbal": "^3.1",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "khill/lavacharts": "3.1.*",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
+        "maatwebsite/excel": "^3.1",
         "nesbot/carbon": "^2.46",
+        "phpoffice/phpspreadsheet": "^1.17",
         "yajra/laravel-datatables": "^1.5"
     },
     "require-dev": {
