--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,12 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "khill/lavacharts": "3.1.*",
         "laravel/framework": "^8.12",
+        "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "maatwebsite/excel": "^3.1",
         "nesbot/carbon": "^2.46",
         "phpoffice/phpspreadsheet": "^1.17",
+        "pusher/pusher-php-server": "^7.0",
         "yajra/laravel-datatables": "^1.5"
     },
     "require-dev": {
